# ENPM661_Project_05

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attach.sh  display_map.csv  gitgo  init.sh  library.sdf  library.xml  report.md
docker/humblebot/: Dockerfile  apt_extra.txt  build.sh  launch.sh  rebuild.sh  requirements.txt
docker/jazzybot/: Dockerfile  launch.sh
docker/ubuntu2204/: Dockerfile  build.sh  launch.sh
docker/ubuntu2404/: Dockerfile  build.sh  launch.sh
mygrid/: mygrid.csv  mygrid.py
project1/: run_arena.sh  run_build.sh  run_controller.sh  run_empty.sh  run_pose_plot.sh  run_rviz.sh  run_teleop.sh
project1/src/terp1_controller/: package.xml
project1/src/terp1_controller/src/: pid.hpp  quaternion.h
project2/: DH_params  cgc_launch.sh  frames_2025-05-07_01.28.24.gv  frames_2025-05-09_14.48.06.gv  frames_2025-05-09_14.55.21.gv  kinematics.py  library_bot_assm_build.sh  library_bot_assm_empty.sh  run_arena.sh  run_build.sh  run_controller.sh  run_empty.sh  run_pose_plot.sh  run_rviz.sh  run_teleop.sh  set_goal.sh  terp2_arm_1.sh  terp2_arm_2.sh  terp2_arm_controller.sh  terp2_arm_demo.sh  terp2_arm_home.sh  terp2_build.sh  terp2_controller.sh  terp2_controller_py.sh  terp2_demo.sh  terp2_empty.sh  terp2_gripper_demo.sh  terp2_imu_to_odom.sh  terp2_library_nav.sh  terp2_monitor.sh  terp2_run_pose_plot.sh  terp2_rviz.sh  terp2_set_arm.sh  terp2_set_goal.sh  terp2_set_gripper.sh  terp2_slam.sh  terp2_teleop.sh
project2/archive/: terp2_arm_2.sh  terp2_arm_demo.sh  terp2_run_pose_plot.sh
project2/archive/terp2_arm_controller/: package.xml  setup.cfg
project2/archive/terp2_arm_controller/terp2_arm_controller/: joint_trajectory_publisher.py  model_state_subscriber.py
project2/src/library_bot_assm/: CMakeLists.txt  package.xml
project2/src/library_bot_assm/config/: control.yaml
project2/src/library_bot_assm/launch/: competition.launch.py  gazebo.launch.py  plot.py  robot.launch.py  rviz.launch.py
project2/src/library_bot_assm/meshes/: arm4_link.STL  bot_base_link.STL  drive_wheel_left_link.STL  drive_wheel_right_link.STL  gripper_base_link.STL  swivel_back_link.STL
project2/src/library_bot_assm/models/arena/: model.sdf
project2/src/library_bot_assm/models/bookshelf/: model.config
project2/src/library_bot_assm/urdf/: library_bot_assm.urdf
project2/src/library_bot_assm/worlds/: library.world
project2/src/library_world_assm/: CMakeLists.txt  package.xml
project2/src/library_world_assm/launch/: display.launch  gazebo.launch  library_world.launch.py
project2/src/library_world_assm/meshes/: 3l.STL  base_link.STL
project2/src/library_world_assm/urdf/: library_world_assm.csv  library_world_assm.urdf
project2/src/library_world_assm/worlds/: new_library.world
project2/src/terp2/: CMakeLists.txt  package.xml
project2/src/terp2/config/: control.yaml  joint_names_library_bot_assm.yaml  scan_filter.yaml  scan_filters.yaml
project2/src/terp2/launch/: competition.launch.py  gazebo.launch.py  plot.py  robot.launch.py  rviz.launch.py  slam_launch.py  teleop.py
project2/src/terp2/library_bot_assm/: CMakeLists.txt  package.xml
project2/src/terp2/library_bot_assm/launch/: display.launch  gazebo.launch
project2/src/terp2/library_bot_assm/urdf/: library_bot_assm.csv
project2/src/terp2/meshes/: arm2_link.STL  gripper_pad1_link.STL  gripper_pad2_link.STL  link_arm_3.STL  link_axle.STL  link_drivewheel_right.STL  link_slot6.STL  link_slot_4.STL  link_swivel_front.STL  link_swivelwheel_back.STL  swivel_front_link.STL  swivelwheel_back_link.STL
project2/src/terp2/rviz/: terp2.rviz
project2/src/terp2/scripts/: driver_path_planning.py  multi_point_planner.py  proj5_waypoints.csv
project2/src/terp2/urdf/: library_bot_assm.urdf.xacro  terp1_controller.urdf.xacro  terp1_model.urdf.xacro  terp2.urdf.xacro  terp2_controller.urdf.xacro  terp2_lidar.urdf.xacro  terp2_model.urdf.xacro  terp2_model.urdf.xacro.bak  terp2_model.urdf.xacro.bak2  terp2_model.urdf.xacro.bak3  terp2_model.urdf.xacro.bak4
project2/src/terp2/worlds/: barrels.world  empty_world.world  library.world
project2/src/terp2_controller/: CMakeLists.txt  package.xml
project2/src/terp2_controller/src/: quaternion.cpp  terp2_controller.cpp  terp2_controller.h
report/: Project2-Group1-FinalReport- FINAL.docx  Project2-Group1-Presentation-FINAL.pptx  dh_calculator.xlsx
solidworks/: axle.SLDPRT  book_slot.SLDPRT  drive_wheel.SLDPRT  gripper_base.SLDPRT  gripper_gear.SLDPRT  gripper_pad.SLDPRT  link1.SLDPRT  link2.SLDPRT  link3.SLDPRT  link4.SLDPRT  robot_base.SLDPRT  robot_with_gripper.SLDASM  robot_with_gripper.SLDDRW  round_cart_base.SLDPRT  swivel_wheel.SLDPRT  wheel_swivel.SLDPRT
solidworks/archive/car_assem3/: package.xml
solidworks/archive/car_assem3/launch/: display.launch  gazebo.launch  spawn_car2.launch.py
solidworks/archive/car_assem3/meshes/: back_axle.STL  blw.STL  brw.STL  flw.STL  frw.STL  rca.STL  trailer_axle.STL  trw.STL
solidworks/archive/car_assem3/urdf/: car_assem3.csv  car_assem3.urdf
solidworks/archive/top assembly no gripper all continuous/top assembly no gripper all continuous/: package.xml
solidworks/archive/top assembly no gripper all continuous/top assembly no gripper all continuous/config/: joint_names_top assembly no gripper all continuous.yaml
solidworks/archive/top assembly no gripper all continuous/top assembly no gripper all continuous/meshes/: link_axle.STL  link_swivel_back.STL  link_swivel_front.STL
solidworks/car_assem3/: CMakeLists.txt
solidworks/car_assem4/: package.xml
solidworks/paperback/: CMakeLists.txt  package.xml
solidworks/paperbackURDF/: CMakeLists.txt  package.xml
solidworks/parts_files/: back_axle.SLDPRT  car_assem3.SLDASM  front_control_arm.SLDPRT  trailer_body.SLDPRT  wheel2.SLDPRT
solidworks/textbookURDF/: CMakeLists.txt
solidworks/textbook_urdf/: CMakeLists.txt  package.xml
solidworks/top_assembly_no_gripper/: CMakeLists.txt
solidworks/top_assembly_with_gripper_URDF/: package.xml
urdf/bookshelf/: CMakeLists.txt  package.xml
urdf/library_bot_assm/: CMakeLists.txt  package.xml
(+211 files in other folders)
