<?xml version="1.0"?>
<!-- ENPM662-Project1-Group1 -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>library_bot_assm</name>
  <version>1.0.0</version>
  <description>Project2 Robot</description>
  <maintainer email="group1@enpm662.umd.edu">group1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- begin jsf add -->
  <build_depend>rosidl_default_generators</build_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ros2_control</depend>
  <!-- end jsf add -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- jsf added next line -->
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    
  </export>
</package>
