<package format="2">
  <name>car_assem3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_assem3</p>
    <p>This package contains configuration data, 3D models and launch files
for car_assem3 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>
  
</package>
